--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,12 +5,15 @@ env:
 # See https://github.com/OCA/odoo-community.org/issues/37#issuecomment-470686449
 parserOptions:
   ecmaVersion: 2019
+  sourceType: module
+  allowImportExportEverywhere: true
 
 overrides:
   - files:
       - "**/*.esm.js"
     parserOptions:
       sourceType: module
+      allowImportExportEverywhere: true
 
 # Globals available in Odoo that shouldn't produce errorings
 globals:
