--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -15,7 +15,8 @@ odoo_version: 13.0
 org_name: Odoo Community Association (OCA)
 org_slug: OCA
 rebel_module_groups:
-- sale_order_line_sequence
+- sale_order_line_sequence,sale_stock_line_sequence
+- sale_sourced_by_line
 repo_description: This project aim to deal with modules related to manage sale and
     their related workflow.
 repo_name: Odoo Sales, Workflow and Organization
