--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,18 +36,11 @@ jobs:
       matrix:
         include:
           - container: ghcr.io/oca/oca-ci/py3.6-odoo13.0:latest
-            include: "sale_order_line_sequence"
+            include: "sale_order_line_sequence,sale_stock_line_sequence"
             makepot: "true"
             name: test with Odoo
           - container: ghcr.io/oca/oca-ci/py3.6-ocb13.0:latest
-            include: "sale_order_line_sequence"
-            name: test with OCB
-          - container: ghcr.io/oca/oca-ci/py3.6-odoo13.0:latest
-            exclude: "sale_order_line_sequence,sale_sourced_by_line"
-            makepot: "true"
-            name: test with Odoo
-          - container: ghcr.io/oca/oca-ci/py3.6-ocb13.0:latest
-            exclude: "sale_order_line_sequence,sale_sourced_by_line"
+            include: "sale_order_line_sequence,sale_stock_line_sequence"
             name: test with OCB
           - container: ghcr.io/oca/oca-ci/py3.6-odoo13.0:latest
             include: "sale_sourced_by_line"
@@ -55,6 +48,13 @@ jobs:
             name: test with Odoo
           - container: ghcr.io/oca/oca-ci/py3.6-ocb13.0:latest
             include: "sale_sourced_by_line"
+            name: test with OCB
+          - container: ghcr.io/oca/oca-ci/py3.6-odoo13.0:latest
+            exclude: "sale_order_line_sequence,sale_stock_line_sequence,sale_sourced_by_line"
+            makepot: "true"
+            name: test with Odoo
+          - container: ghcr.io/oca/oca-ci/py3.6-ocb13.0:latest
+            exclude: "sale_order_line_sequence,sale_stock_line_sequence,sale_sourced_by_line"
             name: test with OCB
     services:
       postgres:
